feat: Adicionada funções de fila de interesse para guardião